--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
-support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Essence Running
+author=AaronPoon
+support=https://github.com/AaronPoon/essence-running.git
+description=Change the default shift option that is displayed when hovering over objects associated with essence running
+tags=essence,running,er,runecraft
+plugins=com.essencerunning.EssenceRunningPlugin
