--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=Essence Running
-author=AaronPoon
+author=Aaron
 support=https://github.com/AaronPoon/essence-running.git
 description=Change the default shift option that is displayed when hovering over objects associated with essence running
 tags=essence,running,er,runecraft
