--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ dependencies {
 }
 
 group = 'com.essencerunning'
-version = '1.0-SNAPSHOT'
+version = '1.3'
 sourceCompatibility = '1.8'
 
 tasks.withType(JavaCompile) {
