--- a/build.gradle
+++ b/build.gradle
@@ -31,4 +31,5 @@ sourceCompatibility = '1.8'
 
 tasks.withType(JavaCompile) {
 	options.encoding = 'UTF-8'
+	options.compilerArgs += '-Xlint:deprecation'
 }
